Network-Policy/allow-egress-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-ns
  namespace: development
spec:
  podSelector:
    matchLabels:
      run: app-pod
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          ns: production
