Network-Policy/allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: practice1
spec:
  podSelector:
    matchLabels:
      run: app-pod
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: db-pod
