Network-Policy/allow-ingress-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-ns
  namespace: production
spec:
  podSelector:
    matchLabels:
      run: live-pod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: development
